# mail-send

./: Cargo.toml
examples/: smtp_auth.rs
src/: lib.rs
src/smtp/: auth.rs  builder.rs  client.rs  ehlo.rs  envelope.rs  message.rs  mod.rs
