[package]
name = "mail-send"
description = "E-mail delivery library with SMTP and DKIM support"
version = "0.4.9"
edition = "2021"
authors = ["Stalwart Labs <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/mail-send"
homepage = "https://github.com/stalwartlabs/mail-send"
keywords = ["smtp", "dkim", "email", "mime", "mail"]
categories = ["email"]
readme = "README.md"

[lib]
doctest = false

[dependencies]
smtp-proto = { version = "0.1" }
mail-builder = { version = "0.3", optional = true }
mail-parser = { version = "0.9", optional = true }
base64 = "0.22"
rand = { version = "0.8.5", optional = true }
md5 = { version = "0.7.0", optional = true }
tokio = { version = "1.23", features = ["io-util", "time"] }
worker = "0.3.0"
log = "0.4.22"

[patch.crates-io]
worker = { path = "../workers-rs/worker" }

[dev-dependencies]
tokio = { version = "1.16", features = [
    "net",
    "io-util",
    "time",
    "rt-multi-thread",
    "macros",
] }
env_logger = "0.11.0"

[features]
default = []
builder = ["mail-builder"]
parser = ["mail-parser"]
digest-md5 = ["md5", "rand"]
cram-md5 = ["md5"]
