[package]
name = "mail-send"
description = "E-mail delivery library with SMTP and DKIM support"
version = "0.4.9"
edition = "2021"
authors = ["Stalwart Labs <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/mail-send"
homepage = "https://github.com/stalwartlabs/mail-send"
keywords = ["smtp", "dkim", "email", "mime", "mail"]
categories = ["email"]
readme = "README.md"

[lib]
doctest = false

[dependencies]
smtp-proto = { version = "0.1" }
mail-auth = { version = "0.4", optional = true }
mail-builder = { version = "0.3", optional = true }
mail-parser = { version = "0.9", optional = true }
base64 = "0.22"
rand = { version = "0.8.5", optional = true }
md5 = { version = "0.7.0", optional = true }
tokio = { version = "1.23", features = ["io-util"] }
rustls = { version = "0.23", default-features = false, features = [
    "std",
], optional = true }
tokio-rustls = { version = "0.26", default-features = false, optional = true }
webpki-roots = { version = "0.26", optional = true }
rustls-pki-types = { version = "1", optional = true }
gethostname = { version = "0.4", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.23", features = ["time"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasmtimer = { version = "0.2.0" }

[dev-dependencies]
env_logger = "0.11.0"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { version = "1.16", features = [
    "net",
    "io-util",
    "time",
    "rt-multi-thread",
    "macros",
] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
client-builder = [
    "tokio/net",
    "tokio/time",
    "rustls",
    "tokio-rustls",
    "webpki-roots",
    "rustls-pki-types",
    "gethostname",
]
builder = ["mail-builder"]
parser = ["mail-parser"]
digest-md5 = ["md5", "rand"]
cram-md5 = ["md5"]
dkim = ["mail-auth"]
aws_lc_rs = ["rustls/aws_lc_rs", "tokio-rustls/aws_lc_rs"]
aws-lc-rs = ["aws_lc_rs"]
fips = ["rustls/fips", "tokio-rustls/fips"]
logging = ["rustls/logging", "tokio-rustls/logging"]
ring = ["rustls/ring", "tokio-rustls/ring"]
tls12 = ["rustls/tls12", "tokio-rustls/tls12"]


[target.'cfg(not(target_family = "wasm"))'.features]
default = [
    "client-builder",
    "digest-md5",
    "cram-md5",
    "builder",
    "dkim",
    "ring",
    "tls12",
]

[target.'cfg(target_family = "wasm")'.features]
default = []

[[example]]
name = "smtp_auth"
required-features = ["client-builder"]

[[example]]
name = "smtp_dkim"
required-features = ["client-builder"]

[[example]]
name = "smtp_raw_message"
required-features = ["client-builder"]

[[example]]
name = "smtp_relay"
required-features = ["client-builder"]

[[example]]
name = "smtp_tls_relay"
required-features = ["client-builder"]
